--- a/src/components/CommandCentre/CommandCentre.module.css
+++ b/src/components/CommandCentre/CommandCentre.module.css
@@ -15,9 +15,9 @@
 }
 
 button:hover {
-  background: #666;
+  background: #4ea044;
   color: #fff;
-  border: 1px solid #666;
+  border: 1px solid #4ea044;
 }
 
 .input {
