--- a/src/components/CommandCentre/CommandCentre.module.css
+++ b/src/components/CommandCentre/CommandCentre.module.css
@@ -14,12 +14,6 @@
   transition: all 0.2s;
 }
 
-button:hover {
-  background: #4ea044;
-  color: #fff;
-  border: 1px solid #4ea044;
-}
-
 .input {
   width: 60%;
   height: 30px;
@@ -52,4 +46,28 @@ button:hover {
   color: red;
   width: 100%;
   padding-top: 5px;
+}
+
+.command-all-wrapper {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  border-top: 1px solid;
+  padding-top: 25px;
+  margin-top: 10px;
+}
+
+.command-all-button {
+  height: 30px;
+  cursor: pointer;
+  background: #fff;
+  border: 1px solid #666;
+  transition: all 0.2s;
+}
+
+.command-all-button:hover,
+.button:hover {
+  background: #4ea044;
+  color: #fff;
+  border: 1px solid #4ea044;
 }
