--- a/src/components/CommandCentre/CommandCentre.module.css
+++ b/src/components/CommandCentre/CommandCentre.module.css
@@ -1,30 +1,34 @@
 .command-centre {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   width: 500px;
+  height: 500px;
   padding: 25px;
+  background-color: #fff;
+  align-items: flex-start;
+}
+
+.control {
+  display: flex;
+  flex-wrap: wrap;
+  height: 0;
+  flex: 1 0 50%;
+  justify-content: space-between;
+  padding: 5px;
 }
 
 .input {
   width: 60%;
   height: 30px;
-  border: 1px solid #666;
+  border: none;
+  background-color: var(--light-grey);
   border-radius: 5px;
 }
 
 .title {
   margin: 0 0 5px;
   width: 100%;
-}
-
-.control {
-  display: flex;
-  flex-wrap: wrap;
-  flex: 1 0 50%;
-  justify-content: space-between;
-  align-content: flex-start;
-  padding: 5px;
+  color: var(--mars);
 }
 
 .location {
@@ -54,19 +58,19 @@
 .command-all-button {
   height: 30px;
   cursor: pointer;
-  background: #fff;
-  border: 1px solid #666;
-  transition: all 0.2s;
+  background-color: var(--mars);
+  color: #fff;
+  border: none;
+  transition: background-color 0.2s;
   border-radius: 5px;
 }
 
 .command-all-button {
   height: 40px;
+  width: 100%;
 }
 
 .command-all-button:hover,
 .button:hover {
-  background: #4ea044;
-  color: #fff;
-  border: 1px solid #4ea044;
+  background-color: var(--mars-hover);
 }
